// Copyright (c) 2015-present Mattermost, Inc. All Rights Reserved.
// See LICENSE.txt for license information.
import {render, waitFor} from '@solidjs/testing-library'

import userEvent from '@testing-library/user-event'

import {IUser} from '../user'
import octoClient from '../octoClient'
import {TestBlockFactory} from '../test/testBlockFactory'
import {TestRouter, mockAppStore, mockDOM, mockMatchMedia, wrapDNDIntl} from '../testUtils'
import {AppStoreProvider} from '../store'
import {Constants} from '../constants'
import {Utils} from '../utils'

import Workspace from './workspace'

Object.defineProperty(Constants, 'versionString', {value: '1.0.0'})
vi.useFakeTimers()
vi.mock('../utils')
vi.mock('../octoClient')
const mockedUtils = vi.mocked(Utils)
const mockedOctoClient = vi.mocked(octoClient)

// vi.importActual is a promise where jest.requireActual was a require, so the
// real module is fetched once here rather than from inside beforeEach.
const {Utils: actualUtils} = await vi.importActual<typeof import('../utils')>('../utils')
const board = TestBlockFactory.createBoard()
board.id = 'board1'
board.teamId = 'team-id'
board.cardProperties = [
    {
        id: 'property1',
        name: 'Property 1',
        type: 'text',
        options: [
            {
                id: 'value1',
                value: 'value 1',
                color: 'propColorBrown',
            },
        ],
    },
    {
        id: 'property2',
        name: 'Property 2',
        type: 'select',
        options: [
            {
                id: 'value2',
                value: 'value 2',
                color: 'propColorBlue',
            },
        ],
    },
]
const activeView = TestBlockFactory.createBoardView(board)
activeView.id = 'view1'
activeView.fields.hiddenOptionIds = []
activeView.fields.visiblePropertyIds = ['property1']
activeView.fields.visibleOptionIds = ['value1']
const fakeBoard = {id: board.id}
activeView.boardId = fakeBoard.id
const card1 = TestBlockFactory.createCard(board)
card1.id = 'card1'
card1.title = 'card-1'
card1.boardId = fakeBoard.id
const card2 = TestBlockFactory.createCard(board)
card2.id = 'card2'
card2.title = 'card-2'
card2.boardId = fakeBoard.id
const card3 = TestBlockFactory.createCard(board)
card3.id = 'card3'
card3.title = 'card-3'
card3.boardId = fakeBoard.id

const me: IUser = {
    id: 'user-id-1',
    username: 'username_1',
    email: '',
    nickname: '',
    firstname: '',
    lastname: '',
    props: {},
    create_at: 0,
    update_at: 0,
    is_bot: false,
    is_guest: false,
    roles: 'system_user',
}

const categoryAttribute1 = TestBlockFactory.createCategoryBoards()
categoryAttribute1.name = 'Category 1'
categoryAttribute1.boardMetadata = [{boardID: board.id, hidden: false}]

const mockRouteParams: Record<string, string> = {}
vi.mock('../hooks/routerMatch', () => ({
    useRouteMatch: () => () => ({
        path: '/',
        params: mockRouteParams,
    }),
}))

describe('src/components/workspace', () => {
    beforeEach(() => {
        mockRouteParams.boardId = board.id
        mockRouteParams.viewId = activeView.id
    })

    const state = {
        teams: {
            current: {id: 'team-id', title: 'Test Team'},
        },
        users: {
            me,
            boardUsers: {[me.id]: me},
            blockSubscriptions: [],
        },
        boards: {
            current: board.id,
            boards: {
                [board.id]: board,
            },
            templates: [],
            myBoardMemberships: {
                [board.id]: {userId: 'user_id_1', schemeAdmin: true},
            },
        },
        limits: {
            limits: {
                cards: 0,
                used_cards: 0,
                card_limit_timestamp: 0,
                views: 0,
            },
        },
        globalTemplates: {
            value: [],
        },
        views: {
            views: {
                [activeView.id]: activeView,
            },
            current: activeView.id,
        },
        cards: {
            templates: [],
            cards: [card1, card2, card3],
        },
        searchText: {},
        clientConfig: {
            value: {
                telemetry: true,
                telemetryid: 'telemetry',
                enablePublicSharedBoards: true,
                teammateNameDisplay: 'username',
            },
        },
        contents: {
            contents: {},
        },
        comments: {
            comments: {},
        },
        sidebar: {
            categoryAttributes: [
                categoryAttribute1,
            ],
            hiddenBoardIDs: [],
        },
    }
    mockedOctoClient.searchTeamUsers.mockResolvedValue(Object.values(state.users.boardUsers))
    const store = mockAppStore(state, {client: mockedOctoClient as any})
    beforeAll(() => {
        mockDOM()
        mockMatchMedia({matches: true})
    })
    beforeEach(() => {
        vi.clearAllMocks()
        mockedUtils.createGuid.mockReturnValue('test-id')

        // Navigation builds a real path even under the Utils auto-mock:
        // navigate(undefined) would crash inside the router instead.
        mockedUtils.generatePath = actualUtils.generatePath
        mockedUtils.getBoardPagePath = actualUtils.getBoardPagePath
    })
    test('should match snapshot', async () => {
        const result = render(() => wrapDNDIntl(() =>
            <AppStoreProvider store={store}>
                <Workspace readonly={false}/>
            </AppStoreProvider>,
        ), {wrapper: TestRouter})
        const container = result.container
        vi.runOnlyPendingTimers()
        expect(container).toMatchSnapshot()
    })
    test('should match snapshot with readonly', async () => {
        const result = render(() => wrapDNDIntl(() =>
            <AppStoreProvider store={store}>
                <Workspace readonly={true}/>
            </AppStoreProvider>,
        ), {wrapper: TestRouter})
        const container = result.container
        vi.runOnlyPendingTimers()
        expect(container).toMatchSnapshot()
    })

    test('return workspace and showcard', async () => {
        const result = render(() => wrapDNDIntl(() =>
            <AppStoreProvider store={store}>
                <Workspace readonly={false}/>
            </AppStoreProvider>,
        ), {wrapper: TestRouter})
        const container = result.container
        vi.runOnlyPendingTimers()

        // React 19 commits when the act callback returns, so the cards only
        // exist to be clicked from a second act.
        const cardElements = container!.querySelectorAll('.KanbanCard')
        expect(cardElements).toBeDefined()
        userEvent.click(cardElements[0])
        expect(container).toMatchSnapshot()
    })

    test('return workspace readonly and showcard', async () => {
        const result = render(() => wrapDNDIntl(() =>
            <AppStoreProvider store={store}>
                <Workspace readonly={true}/>
            </AppStoreProvider>,
        ), {wrapper: TestRouter})
        const container = result.container
        vi.runOnlyPendingTimers()

        // React 19 commits when the act callback returns, so the cards only
        // exist to be clicked from a second act.
        const cardElements = container!.querySelectorAll('.KanbanCard')
        expect(cardElements).toBeDefined()
        userEvent.click(cardElements[0])
        expect(container).toMatchSnapshot()
        expect(mockedUtils.getReadToken).toHaveBeenCalledTimes(1)
    })

    test('return workspace with BoardTemplateSelector component', async () => {
        const emptyStore = mockAppStore({
            users: {
                me,
                boardUsers: {[me.id]: me},
            },
            teams: {
                current: {id: 'team-id', title: 'Test Team'},
            },
            boards: {
                current: board.id,
                boards: {
                    [board.id]: board,
                },
                templates: [],
                myBoardMemberships: {
                    [board.id]: {userId: 'user_id_1', schemeAdmin: true},
                },
            },
            views: {
                views: {},
            },
            cards: {
                cards: [],
            },
            globalTemplates: {
                value: [],
            },
            searchText: {},
            clientConfig: {
                value: {
                    telemetry: true,
                    telemetryid: 'telemetry',
                    enablePublicSharedBoards: true,
                    teammateNameDisplay: 'username',
                },
            },
            sidebar: {
                categoryAttributes: [
                    categoryAttribute1,
                ],
                hiddenBoardIDs: [],
            },
        })
        const result = render(() => wrapDNDIntl(() =>
            <AppStoreProvider store={emptyStore}>
                <Workspace readonly={true}/>
            </AppStoreProvider>,
        ), {wrapper: TestRouter})
        const container = result.container
        vi.runOnlyPendingTimers()

        expect(container).toMatchSnapshot()
    })

    // TODO(react-19): see docs/npm-dependency-warnings.md -- tooltip count depends on effect timing that React 19 changed
    // eslint-disable-next-line no-only-tests/no-only-tests
    test.skip('show add new view tooltip', async () => {
        const welcomeBoard = TestBlockFactory.createBoard()
        welcomeBoard.title = 'Welcome to Boards!'

        const onboardingCard = TestBlockFactory.createCard(welcomeBoard)
        onboardingCard.id = 'card1'
        onboardingCard.title = 'Create a new card'
        onboardingCard.boardId = welcomeBoard.id

        const localState = {
            teams: {
                current: {id: 'team-id', title: 'Test Team'},
            },
            users: {
                me: {
                    id: 'user-id-1',
                    username: 'username_1',
                    email: '',
                    nickname: '',
                    firstname: '',
                    lastname: '',
                    create_at: 0,
                    update_at: 0,
                    is_bot: false,
                    roles: 'system_user',
                },
                myConfig: {
                    welcomePageViewed: {value: '1'},
                    onboardingTourStarted: {value: true},
                    tourCategory: {value: 'board'},
                    onboardingTourStep: {value: '0'},
                },
                boardUsers: {[me.id]: me},
                blockSubscriptions: [],
            },
            boards: {
                current: welcomeBoard.id,
                boards: {
                    [welcomeBoard.id]: welcomeBoard,
                },
                templates: [],
                myBoardMemberships: {
                    [welcomeBoard.id]: {userId: 'user_id_1', schemeAdmin: true},
                },
            },
            limits: {
                limits: {
                    cards: 0,
                    used_cards: 0,
                    card_limit_timestamp: 0,
                    views: 0,
                },
            },
            globalTemplates: {
                value: [],
            },
            views: {
                views: {
                    [activeView.id]: activeView,
                },
                current: activeView.id,
            },
            cards: {
                templates: [],
                cards: [onboardingCard, card1, card2, card3],
            },
            searchText: {},
            clientConfig: {
                value: {
                    telemetry: true,
                    telemetryid: 'telemetry',
                    enablePublicSharedBoards: true,
                    teammateNameDisplay: 'username',
                },
            },
            contents: {
                contents: {},
            },
            comments: {
                comments: {},
            },
            sidebar: {
                categoryAttributes: [
                    categoryAttribute1,
                ],
                hiddenBoardIDs: [],
            },
        }
        const localStore = mockAppStore(localState, {client: mockedOctoClient as any})

        render(() => wrapDNDIntl(() =>
            <AppStoreProvider store={localStore}>
                <Workspace readonly={false}/>
            </AppStoreProvider>,
        ), {wrapper: TestRouter})

        vi.runOnlyPendingTimers()

        await waitFor(() => expect(document.querySelectorAll('.AddViewTourStep')).toBeDefined(), {timeout: 5000})

        const elements = document.querySelectorAll('.AddViewTourStep')
        expect(elements.length).toBe(2)
        expect(elements[1]).toMatchSnapshot()
    })
})
