// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/components/workspace > return workspace and showcard 1`] = `
<div>
  <div
    class="Workspace"
  >
    <div
      class="Sidebar octo-sidebar"
    >
      <div
        class="octo-sidebar-header"
      >
        <div
          class="heading"
        >
          <div
            class="SidebarUserMenu"
          >
            <div
              class="ModalWrapper"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <div
                  class="logo"
                >
                  <div
                    class="logo-title"
                  >
                    <svg
                      class="AppLogoIcon Icon"
                      version="1.1"
                      viewBox="0 0 24 24"
                      x="0px"
                      y="0px"
                    >
                      <rect
                        height="16"
                        rx="1.5"
                        width="5"
                        x="2.5"
                        y="4"
                      />
                      <rect
                        height="11"
                        rx="1.5"
                        width="5"
                        x="9.5"
                        y="4"
                      />
                      <rect
                        height="6"
                        rx="1.5"
                        width="5"
                        x="16.5"
                        y="4"
                      />
                    </svg>
                    <span>
                      XCIII
                    </span>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="sidebarSwitcher"
        >
          <button
            type="button"
          >
            <svg
              class="HideSidebarIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="80,20 50,50 80,80"
              />
              <polyline
                points="50,20 20,50, 50,80"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="WorkspaceTitle"
      />
      <div
        class="BoardsSwitcherWrapper"
      >
        <div
          class="BoardsSwitcher"
        >
          <i
            class="CompassIcon icon-magnify MagnifyIcon"
          />
          <div>
            <span>
              Find Boards
            </span>
          </div>
        </div>
        
        
        
      </div>
      <div
        class="octo-sidebar-list"
      />
      <div
        class="octo-spacer"
      />
      <div
        class="add-board"
      >
        + Add board
      </div>
      <div
        class="SidebarSettingsButton"
      >
        <button
          aria-label="Settings"
          class="SidebarSettingsButton__entry"
          type="button"
        >
          <i
            class="CompassIcon icon-settings-outline SettingsIcon"
          />
          Settings
        </button>
        
      </div>
    </div>
    <div
      class="mainFrame"
    >
      
      
      <div
        class="BoardComponent"
      >
        
        
        <div
          class="top-head"
        >
          <div
            class="TopBar"
          >
            <div
              class="ThemeMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set theme"
                  class="TopBar__button"
                  title="Set theme"
                  type="button"
                >
                  <svg
                    class="ThemeIcon Icon"
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="8.4"
                      stroke="currentColor"
                      stroke-width="1.7"
                    />
                    <path
                      d="M12 3.6a8.4 8.4 0 0 1 0 16.8V3.6Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                
              </div>
            </div>
            <div
              class="LanguageMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set language"
                  class="TopBar__button"
                  title="Set language"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-translate"
                  />
                </button>
                
              </div>
            </div>
            <span
              class="TopBar__divider"
            />
            <a
              class="link"
              href="https://github.com/artipop/xciii/issues"
              rel="noreferrer"
              target="_blank"
            >
              Give feedback
            </a>
            <a
              href="https://github.com/artipop/xciii"
              rel="noreferrer"
              target="_blank"
            >
              <i
                class="CompassIcon icon-help-circle-outline HelpIcon"
              />
            </a>
          </div>
          <div
            class="mid-head"
          >
            <div
              class="ViewTitle"
            >
              <div
                class="add-buttons add-visible"
              >
                
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-eye-off-outline"
                  />
                  <span>
                    hide description
                  </span>
                  
                </button>
                
              </div>
              <div
                class="title"
              >
                <div
                  class="IconSelector"
                >
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <div
                      class="octo-icon size-m"
                    >
                      <span>
                        i
                      </span>
                    </div>
                    
                  </div>
                </div>
                <input
                  class="Editable title"
                  placeholder="Untitled board"
                  spellcheck="true"
                  title="board title"
                />
              </div>
              <div
                class="description"
              >
                <div
                  class="MarkdownEditor octo-editor  "
                >
                  <div
                    class="octo-editor-preview"
                    data-testid="preview-element"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="shareButtonWrapper"
            >
              <div
                class="ShareBoardButton"
              >
                <button
                  title="Share board"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-lock-outline LockOutlineIcon"
                  />
                  <span>
                    Share
                  </span>
                  
                </button>
                
              </div>
              
              
            </div>
          </div>
          <div
            class="ViewHeader"
          >
            <div
              class="viewSelector"
            >
              <input
                class="Editable "
                placeholder="Untitled View"
                spellcheck="true"
                title="view title"
              />
              <div>
                <div
                  aria-label="View menu"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-chevron-down DropdownIcon"
                    />
                  </button>
                  
                </div>
                
              </div>
            </div>
            <div
              class="octo-spacer"
            />
            <div
              aria-label="Properties menu"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                
                <span>
                  Properties
                </span>
                
              </button>
              
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                
                <span>
                  Group by: 
                  <span
                    id="groupByLabel"
                    style="color:rgb(var(--center-channel-color-rgb))"
                  >
                    Property 2
                  </span>
                </span>
                
              </button>
              
            </div>
            <div
              class="ModalWrapper"
            >
              <button
                type="button"
              >
                
                <span>
                  Filter
                </span>
                
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                
                <span>
                  Sort
                </span>
                
              </button>
              
            </div>
            <div
              class="board-search-field"
            >
              <i
                class="CompassIcon icon-magnify board-search-icon"
              />
              <input
                class="Editable "
                placeholder="Search cards"
                title=""
              />
            </div>
            <div
              class="ModalWrapper"
            >
              <div
                aria-label="View header menu"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
                
              </div>
            </div>
            <div
              class="ButtonWithMenu"
            >
              <div
                class="button-text"
              >
                New
              </div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <div
                  class="button-dropdown"
                >
                  <i
                    class="CompassIcon icon-chevron-down DropdownIcon"
                  />
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="Kanban"
        >
          <div
            class="octo-board-header"
            id="mainBoardHeader"
          >
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              <span
                class="Label empty "
                title="Items with an empty Property 2 property will go here. This column cannot be removed."
              >
                No Property 2
              </span>
              
              
              <div
                class="KanbanCalculation"
              >
                <button
                  title="3"
                  type="button"
                >
                  
                  <span>
                    3
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
                
              </div>
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-plus AddIcon"
                />
              </button>
            </div>
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              
              
              <span
                class="Label propColorBlue "
              >
                <input
                  class="Editable "
                  placeholder="New Select"
                  spellcheck="true"
                  title="value 2"
                />
              </span>
              <div
                class="KanbanCalculation"
              >
                <button
                  title="0"
                  type="button"
                >
                  
                  <span>
                    0
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
                
              </div>
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-plus AddIcon"
                />
              </button>
            </div>
            
            <div
              class="octo-board-header-cell narrow"
            >
              <button
                type="button"
              >
                
                <span>
                  + Add a group
                </span>
                
              </button>
            </div>
          </div>
          <div
            class="octo-board-body"
            id="mainBoardBody"
          >
            <div
              class="octo-board-column"
            >
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper optionsMenu"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                  
                </div>
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-1
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper optionsMenu"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                  
                </div>
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-2
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper optionsMenu"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                  
                </div>
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-3
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <button
                type="button"
              >
                
                <span>
                  + New
                </span>
                
              </button>
            </div>
            <div
              class="octo-board-column"
            >
              <button
                type="button"
              >
                
                <span>
                  + New
                </span>
                
              </button>
            </div>
            
          </div>
          
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/workspace > return workspace readonly and showcard 1`] = `
<div>
  <div
    class="Workspace"
  >
    
    <div
      class="mainFrame"
    >
      
      
      <div
        class="BoardComponent"
      >
        
        
        <div
          class="top-head"
        >
          <div
            class="TopBar"
          >
            <div
              class="ThemeMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set theme"
                  class="TopBar__button"
                  title="Set theme"
                  type="button"
                >
                  <svg
                    class="ThemeIcon Icon"
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="8.4"
                      stroke="currentColor"
                      stroke-width="1.7"
                    />
                    <path
                      d="M12 3.6a8.4 8.4 0 0 1 0 16.8V3.6Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                
              </div>
            </div>
            <div
              class="LanguageMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set language"
                  class="TopBar__button"
                  title="Set language"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-translate"
                  />
                </button>
                
              </div>
            </div>
            <span
              class="TopBar__divider"
            />
            <a
              class="link"
              href="https://github.com/artipop/xciii/issues"
              rel="noreferrer"
              target="_blank"
            >
              Give feedback
            </a>
            <a
              href="https://github.com/artipop/xciii"
              rel="noreferrer"
              target="_blank"
            >
              <i
                class="CompassIcon icon-help-circle-outline HelpIcon"
              />
            </a>
          </div>
          <div
            class="mid-head"
          >
            <div
              class="ViewTitle"
            >
              <div
                class="add-buttons add-visible"
              >
                
                
                
              </div>
              <div
                class="title"
              >
                <div
                  class="IconSelector"
                >
                  <div
                    class="octo-icon size-m readonly"
                  >
                    <span>
                      i
                    </span>
                  </div>
                </div>
                <input
                  class="Editable readonly title"
                  placeholder="Untitled board"
                  readonly=""
                  spellcheck="true"
                  title="board title"
                />
              </div>
              <div
                class="description"
              >
                <div
                  class="MarkdownEditor octo-editor  "
                >
                  <div
                    class="octo-editor-preview"
                    data-testid="preview-element"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="shareButtonWrapper"
            >
              
              <div
                class="ShareBoardLoginButton"
              >
                <button
                  title="Login"
                  type="button"
                >
                  
                  <span>
                    Login
                  </span>
                  
                </button>
              </div>
              
            </div>
          </div>
          <div
            class="ViewHeader"
          >
            <div
              class="viewSelector"
            >
              <input
                class="Editable readonly "
                placeholder="Untitled View"
                readonly=""
                spellcheck="true"
                title="view title"
              />
              
            </div>
            <div
              class="octo-spacer"
            />
            
            <div
              class="board-search-field"
            >
              <i
                class="CompassIcon icon-magnify board-search-icon"
              />
              <input
                class="Editable "
                placeholder="Search cards"
                title=""
              />
            </div>
            
          </div>
        </div>
        <div
          class="Kanban"
        >
          <div
            class="octo-board-header"
            id="mainBoardHeader"
          >
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              <span
                class="Label empty "
                title="Items with an empty Property 2 property will go here. This column cannot be removed."
              >
                No Property 2
              </span>
              
              
              <div
                class="KanbanCalculation"
              >
                <button
                  title="3"
                  type="button"
                >
                  
                  <span>
                    3
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              
            </div>
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              
              
              <span
                class="Label propColorBlue "
              >
                <input
                  class="Editable readonly "
                  placeholder="New Select"
                  readonly=""
                  spellcheck="true"
                  title="value 2"
                />
              </span>
              <div
                class="KanbanCalculation"
              >
                <button
                  title="0"
                  type="button"
                >
                  
                  <span>
                    0
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              
            </div>
            
            
          </div>
          <div
            class="octo-board-body"
            id="mainBoardBody"
          >
            <div
              class="octo-board-column"
            >
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-1
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-2
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-3
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
            </div>
            <div
              class="octo-board-column"
            />
            
          </div>
          
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/workspace > return workspace with BoardTemplateSelector component 1`] = `
<div>
  <div
    class="Workspace"
  >
    
    <div
      class="mainFrame"
    >
      
      
      
    </div>
  </div>
</div>
`;

exports[`src/components/workspace > should match snapshot 1`] = `
<div>
  <div
    class="Workspace"
  >
    <div
      class="Sidebar octo-sidebar"
    >
      <div
        class="octo-sidebar-header"
      >
        <div
          class="heading"
        >
          <div
            class="SidebarUserMenu"
          >
            <div
              class="ModalWrapper"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <div
                  class="logo"
                >
                  <div
                    class="logo-title"
                  >
                    <svg
                      class="AppLogoIcon Icon"
                      version="1.1"
                      viewBox="0 0 24 24"
                      x="0px"
                      y="0px"
                    >
                      <rect
                        height="16"
                        rx="1.5"
                        width="5"
                        x="2.5"
                        y="4"
                      />
                      <rect
                        height="11"
                        rx="1.5"
                        width="5"
                        x="9.5"
                        y="4"
                      />
                      <rect
                        height="6"
                        rx="1.5"
                        width="5"
                        x="16.5"
                        y="4"
                      />
                    </svg>
                    <span>
                      XCIII
                    </span>
                  </div>
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="octo-spacer"
        />
        <div
          class="sidebarSwitcher"
        >
          <button
            type="button"
          >
            <svg
              class="HideSidebarIcon Icon"
              viewBox="0 0 100 100"
              xmlns="http://www.w3.org/2000/svg"
            >
              <polyline
                points="80,20 50,50 80,80"
              />
              <polyline
                points="50,20 20,50, 50,80"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="WorkspaceTitle"
      />
      <div
        class="BoardsSwitcherWrapper"
      >
        <div
          class="BoardsSwitcher"
        >
          <i
            class="CompassIcon icon-magnify MagnifyIcon"
          />
          <div>
            <span>
              Find Boards
            </span>
          </div>
        </div>
        
        
        
      </div>
      <div
        class="octo-sidebar-list"
      >
        <div>
          <div
            class="SidebarCategory"
          >
            <div
              class="categoryBoardsDroppableArea"
            >
              <div
                class="octo-sidebar-item category expanded active"
              >
                <div
                  class="octo-sidebar-title category-title"
                  title="Category 1"
                >
                  <i
                    class="CompassIcon icon-chevron-right ChevronRightIcon"
                  />
                  Category 1
                  <div
                    class="sidebarCategoriesTour"
                  />
                </div>
                <div
                  class=""
                >
                  
                  
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <button
                      type="button"
                    >
                      <i
                        class="CompassIcon icon-dots-horizontal OptionsIcon"
                      />
                    </button>
                    
                  </div>
                </div>
              </div>
              
              
              
              
              
              
              
            </div>
          </div>
        </div>
      </div>
      <div
        class="octo-spacer"
      />
      <div
        class="add-board"
      >
        + Add board
      </div>
      <div
        class="SidebarSettingsButton"
      >
        <button
          aria-label="Settings"
          class="SidebarSettingsButton__entry"
          type="button"
        >
          <i
            class="CompassIcon icon-settings-outline SettingsIcon"
          />
          Settings
        </button>
        
      </div>
    </div>
    <div
      class="mainFrame"
    >
      
      
      <div
        class="BoardComponent"
      >
        
        
        <div
          class="top-head"
        >
          <div
            class="TopBar"
          >
            <div
              class="ThemeMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set theme"
                  class="TopBar__button"
                  title="Set theme"
                  type="button"
                >
                  <svg
                    class="ThemeIcon Icon"
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="8.4"
                      stroke="currentColor"
                      stroke-width="1.7"
                    />
                    <path
                      d="M12 3.6a8.4 8.4 0 0 1 0 16.8V3.6Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                
              </div>
            </div>
            <div
              class="LanguageMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set language"
                  class="TopBar__button"
                  title="Set language"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-translate"
                  />
                </button>
                
              </div>
            </div>
            <span
              class="TopBar__divider"
            />
            <a
              class="link"
              href="https://github.com/artipop/xciii/issues"
              rel="noreferrer"
              target="_blank"
            >
              Give feedback
            </a>
            <a
              href="https://github.com/artipop/xciii"
              rel="noreferrer"
              target="_blank"
            >
              <i
                class="CompassIcon icon-help-circle-outline HelpIcon"
              />
            </a>
          </div>
          <div
            class="mid-head"
          >
            <div
              class="ViewTitle"
            >
              <div
                class="add-buttons add-visible"
              >
                
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-eye-off-outline"
                  />
                  <span>
                    hide description
                  </span>
                  
                </button>
                
              </div>
              <div
                class="title"
              >
                <div
                  class="IconSelector"
                >
                  <div
                    aria-label="menuwrapper"
                    class="MenuWrapper"
                    role="button"
                  >
                    <div
                      class="octo-icon size-m"
                    >
                      <span>
                        i
                      </span>
                    </div>
                    
                  </div>
                </div>
                <input
                  class="Editable title"
                  placeholder="Untitled board"
                  spellcheck="true"
                  title="board title"
                />
              </div>
              <div
                class="description"
              >
                <div
                  class="MarkdownEditor octo-editor  "
                >
                  <div
                    class="octo-editor-preview"
                    data-testid="preview-element"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="shareButtonWrapper"
            >
              <div
                class="ShareBoardButton"
              >
                <button
                  title="Share board"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-lock-outline LockOutlineIcon"
                  />
                  <span>
                    Share
                  </span>
                  
                </button>
                
              </div>
              
              
            </div>
          </div>
          <div
            class="ViewHeader"
          >
            <div
              class="viewSelector"
            >
              <input
                class="Editable "
                placeholder="Untitled View"
                spellcheck="true"
                title="view title"
              />
              <div>
                <div
                  aria-label="View menu"
                  class="MenuWrapper"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-chevron-down DropdownIcon"
                    />
                  </button>
                  
                </div>
                
              </div>
            </div>
            <div
              class="octo-spacer"
            />
            <div
              aria-label="Properties menu"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                
                <span>
                  Properties
                </span>
                
              </button>
              
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                
                <span>
                  Group by: 
                  <span
                    id="groupByLabel"
                    style="color:rgb(var(--center-channel-color-rgb))"
                  >
                    Property 2
                  </span>
                </span>
                
              </button>
              
            </div>
            <div
              class="ModalWrapper"
            >
              <button
                type="button"
              >
                
                <span>
                  Filter
                </span>
                
              </button>
            </div>
            <div
              aria-label="menuwrapper"
              class="MenuWrapper"
              role="button"
            >
              <button
                type="button"
              >
                
                <span>
                  Sort
                </span>
                
              </button>
              
            </div>
            <div
              class="board-search-field"
            >
              <i
                class="CompassIcon icon-magnify board-search-icon"
              />
              <input
                class="Editable "
                placeholder="Search cards"
                title=""
              />
            </div>
            <div
              class="ModalWrapper"
            >
              <div
                aria-label="View header menu"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
                
              </div>
            </div>
            <div
              class="ButtonWithMenu"
            >
              <div
                class="button-text"
              >
                New
              </div>
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <div
                  class="button-dropdown"
                >
                  <i
                    class="CompassIcon icon-chevron-down DropdownIcon"
                  />
                </div>
                
              </div>
            </div>
          </div>
        </div>
        <div
          class="Kanban"
        >
          <div
            class="octo-board-header"
            id="mainBoardHeader"
          >
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              <span
                class="Label empty "
                title="Items with an empty Property 2 property will go here. This column cannot be removed."
              >
                No Property 2
              </span>
              
              
              <div
                class="KanbanCalculation"
              >
                <button
                  title="3"
                  type="button"
                >
                  
                  <span>
                    3
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
                
              </div>
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-plus AddIcon"
                />
              </button>
            </div>
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              
              
              <span
                class="Label propColorBlue "
              >
                <input
                  class="Editable "
                  placeholder="New Select"
                  spellcheck="true"
                  title="value 2"
                />
              </span>
              <div
                class="KanbanCalculation"
              >
                <button
                  title="0"
                  type="button"
                >
                  
                  <span>
                    0
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  type="button"
                >
                  <i
                    class="CompassIcon icon-dots-horizontal OptionsIcon"
                  />
                </button>
                
              </div>
              <button
                type="button"
              >
                <i
                  class="CompassIcon icon-plus AddIcon"
                />
              </button>
            </div>
            
            <div
              class="octo-board-header-cell narrow"
            >
              <button
                type="button"
              >
                
                <span>
                  + Add a group
                </span>
                
              </button>
            </div>
          </div>
          <div
            class="octo-board-body"
            id="mainBoardBody"
          >
            <div
              class="octo-board-column"
            >
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper optionsMenu"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                  
                </div>
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-1
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper optionsMenu"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                  
                </div>
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-2
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                <div
                  aria-label="menuwrapper"
                  class="MenuWrapper optionsMenu"
                  role="button"
                >
                  <button
                    type="button"
                  >
                    <i
                      class="CompassIcon icon-dots-horizontal OptionsIcon"
                    />
                  </button>
                  
                </div>
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-3
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <button
                type="button"
              >
                
                <span>
                  + New
                </span>
                
              </button>
            </div>
            <div
              class="octo-board-column"
            >
              <button
                type="button"
              >
                
                <span>
                  + New
                </span>
                
              </button>
            </div>
            
          </div>
          
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/workspace > should match snapshot with readonly 1`] = `
<div>
  <div
    class="Workspace"
  >
    
    <div
      class="mainFrame"
    >
      
      
      <div
        class="BoardComponent"
      >
        
        
        <div
          class="top-head"
        >
          <div
            class="TopBar"
          >
            <div
              class="ThemeMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set theme"
                  class="TopBar__button"
                  title="Set theme"
                  type="button"
                >
                  <svg
                    class="ThemeIcon Icon"
                    fill="none"
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="8.4"
                      stroke="currentColor"
                      stroke-width="1.7"
                    />
                    <path
                      d="M12 3.6a8.4 8.4 0 0 1 0 16.8V3.6Z"
                      fill="currentColor"
                    />
                  </svg>
                </button>
                
              </div>
            </div>
            <div
              class="LanguageMenu"
            >
              <div
                aria-label="menuwrapper"
                class="MenuWrapper"
                role="button"
              >
                <button
                  aria-label="Set language"
                  class="TopBar__button"
                  title="Set language"
                  type="button"
                >
                  <i
                    class="CompassIcon icon-translate"
                  />
                </button>
                
              </div>
            </div>
            <span
              class="TopBar__divider"
            />
            <a
              class="link"
              href="https://github.com/artipop/xciii/issues"
              rel="noreferrer"
              target="_blank"
            >
              Give feedback
            </a>
            <a
              href="https://github.com/artipop/xciii"
              rel="noreferrer"
              target="_blank"
            >
              <i
                class="CompassIcon icon-help-circle-outline HelpIcon"
              />
            </a>
          </div>
          <div
            class="mid-head"
          >
            <div
              class="ViewTitle"
            >
              <div
                class="add-buttons add-visible"
              >
                
                
                
              </div>
              <div
                class="title"
              >
                <div
                  class="IconSelector"
                >
                  <div
                    class="octo-icon size-m readonly"
                  >
                    <span>
                      i
                    </span>
                  </div>
                </div>
                <input
                  class="Editable readonly title"
                  placeholder="Untitled board"
                  readonly=""
                  spellcheck="true"
                  title="board title"
                />
              </div>
              <div
                class="description"
              >
                <div
                  class="MarkdownEditor octo-editor  "
                >
                  <div
                    class="octo-editor-preview"
                    data-testid="preview-element"
                  />
                </div>
              </div>
            </div>
            
            <div
              class="shareButtonWrapper"
            >
              
              <div
                class="ShareBoardLoginButton"
              >
                <button
                  title="Login"
                  type="button"
                >
                  
                  <span>
                    Login
                  </span>
                  
                </button>
              </div>
              
            </div>
          </div>
          <div
            class="ViewHeader"
          >
            <div
              class="viewSelector"
            >
              <input
                class="Editable readonly "
                placeholder="Untitled View"
                readonly=""
                spellcheck="true"
                title="view title"
              />
              
            </div>
            <div
              class="octo-spacer"
            />
            
            <div
              class="board-search-field"
            >
              <i
                class="CompassIcon icon-magnify board-search-icon"
              />
              <input
                class="Editable "
                placeholder="Search cards"
                title=""
              />
            </div>
            
          </div>
        </div>
        <div
          class="Kanban"
        >
          <div
            class="octo-board-header"
            id="mainBoardHeader"
          >
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              <span
                class="Label empty "
                title="Items with an empty Property 2 property will go here. This column cannot be removed."
              >
                No Property 2
              </span>
              
              
              <div
                class="KanbanCalculation"
              >
                <button
                  title="3"
                  type="button"
                >
                  
                  <span>
                    3
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              
            </div>
            <div
              class="octo-board-header-cell KanbanColumnHeader"
              style="opacity: 1;"
            >
              
              
              <span
                class="Label propColorBlue "
              >
                <input
                  class="Editable readonly "
                  placeholder="New Select"
                  readonly=""
                  spellcheck="true"
                  title="value 2"
                />
              </span>
              <div
                class="KanbanCalculation"
              >
                <button
                  title="0"
                  type="button"
                >
                  
                  <span>
                    0
                  </span>
                  
                </button>
                
              </div>
              
              <div
                class="octo-spacer"
              />
              
            </div>
            
            
          </div>
          <div
            class="octo-board-body"
            id="mainBoardBody"
          >
            <div
              class="octo-board-column"
            >
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-1
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-2
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
              <div
                class="KanbanCard"
                style="opacity: 1;"
              >
                
                <div
                  class="octo-icontitle"
                >
                  
                  <div
                    class="octo-icon"
                  >
                    i
                  </div>
                  <div
                    class="octo-titletext"
                  >
                    card-3
                  </div>
                </div>
                <div
                  class="octo-tooltip tooltip-top"
                  data-tooltip="Property 1"
                >
                  <div
                    class="octo-propertyvalue octo-propertyvalue--readonly"
                  >
                    value1
                  </div>
                </div>
                
              </div>
            </div>
            <div
              class="octo-board-column"
            />
            
          </div>
          
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
